Interview 2 blog added, scrollbar color issue fixed

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -128,11 +128,11 @@
   --primary-d-rgb: 5, 7, 12;
   --primary-d: #e9e9e9;
 
-  --primary-xl-rgb: 44, 57, 81;
-  --primary-xl: #2c3951;
+  --primary-xl-rgb: 237, 237, 237;
+  --primary-xl: #ededed;
 
-  --primary-xxl-rgb: 62, 78, 107;
-  --primary-xxl: #3e4e6b;
+  --primary-xxl-rgb: 240, 240, 240;
+  --primary-xxl: #f0f0f0;
 
   --secondary-l-rgb: 153, 101, 226;
   --secondary-l: #9965e2;
