--- a/styles/pages/blog.module.scss
+++ b/styles/pages/blog.module.scss
@@ -2,7 +2,7 @@
   font-size: var(--text-r);
 
   code {
-    background: var(--primary-l);
+    background: var(--primary-xxl);
     padding: 2px 4px;
     border-radius: 2px;
   }
